--- a/cashman-flask-project/Dockerfile
+++ b/cashman-flask-project/Dockerfile
@@ -1,12 +1,12 @@
 # Using lightweight alpine image
-FROM python:3.8-alpine
+FROM python:3.10-alpine
 
 # Installing packages
 RUN apk update
 RUN pip install --no-cache-dir pipenv
 
 # Defining working directory and adding source code
-WORKDIR /usr/src/app
+# WORKDIR /usr/src/app
 COPY Pipfile Pipfile.lock bootstrap.sh ./
 COPY cashman ./cashman
 
@@ -15,4 +15,5 @@ RUN pipenv install --system --deploy
 
 # Start app
 EXPOSE 5000
-ENTRYPOINT ["/usr/src/app/bootstrap.sh"]
+
+ENTRYPOINT ["./bootstrap.sh"]
