--- a/cashman-flask-project/helm/templates/deployment.yaml
+++ b/cashman-flask-project/helm/templates/deployment.yaml
@@ -43,10 +43,10 @@ spec:
               path: {{ .Values.liveness.path }}
               port: http
     {{ end }}
-          # readinessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: http
+          readinessProbe:
+            httpGet:
+              path: /
+              port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
